tests/tooling/fixtures/native/execution/positive/nil_literal_global_initializer.objc3
module NilLiteralGlobalInitializer;

let base = nil;
let derived = base + 7;

fn main() -> i32 {
  return derived;
}
