tests/tooling/fixtures/native/execution/negative/global_assignment_compound_bool_rhs.objc3
module GlobalAssignmentCompoundBoolRhs;

let total = 5;

fn main() -> i32 {
  let flag = true;
  total |= flag;
  return total;
}
